@@ -1,6 +1,5 @@
 package survival2d.match.util;
 
-import java.util.Arrays;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -11,14 +10,16 @@ import lombok.ToString;
 @ToString
 public class Position {
 
-  public static List<Position> _4_NEIGHBOURS =
-      Arrays.asList(
-          new Position(-1, 0), new Position(1, 0), new Position(0, -1), new Position(0, 1));
-  int x;
-  int y;
+  public static Position LEFT = new Position(-1, 0);
+  public static Position RIGHT = new Position(1, 0);
+  public static Position DOWN = new Position(0, -1);
+  public static Position UP = new Position(0, 1);
+  public static List<Position> NEIGHBOURS = List.of(LEFT, RIGHT, DOWN, UP);
+  public int x;
+  public int y;
 
   public Position(Position position) {
-    x = position.x;
-    y = position.y;
+    this.x = position.x;
+    this.y = position.y;
   }
 }
